<resources>
    <string name="app_name">aboutMe2.0</string>

    <!-- TODO: These are all screens I have -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>
    <string name="fifth_fragment">Fifth Fragment</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: All icons of the bottom menu -->
    <string name="bottom_menu_icon_profile">Profile</string>
    <string name="bottom_menu_icon_school">Education</string>
    <string name="bottom_menu_icon_hobbies">Hobbies</string>
    <string name="bottom_menu_icon_skills">Skills</string>
    <string name="bottom_menu_icon_achievements">Achievements</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: FRAGMENT FIST.xml (MAIN SCREEN)  -->
    <string name="user_name_fragmentFirst">Marcos Oliveira</string>
    <string name="user_shortIntro_fragmentFirst">A Brazilian studying I.T at Dorset College</string>
    <string name="user_copyright_fragmentFirst">©Copyright Marcos Oliveira 2022</string>
    <string name="user_buldWith_fragmentFirst">Built with Android Studio</string>
    <string name="email_icon_fragmentFirst">user_mail</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: FRAGMENT SECOND.xml (EDUCATION SCREEN)  -->
    <string name="about_my_education">My education</string>
    <string name="todo">TODO</string>
    <string name="lorem_text_education">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long
        established fact that a reader will be distracted by the readable content of a page when
        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
        distribution of letters, as opposed to using \'Content here, content here\', making it look
        like readable English. Many desktop publishing packages and web page editors now use Lorem
        Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web
        sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: FRAGMENT THIRD.xml (HOBBIES SCREEN)  -->
    <string name="about_my_hobbies">My hobbies</string>
    <string name="lorem_text_hobbies">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long
        established fact that a reader will be distracted by the readable content of a page when
        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
        distribution of letters, as opposed to using \'Content here, content here\', making it look
        like readable English. Many desktop publishing packages and web page editors now use Lorem
        Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web
        sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: FRAGMENT FOURTH.xml (SKILLS SCREEN)  -->
    <string name="about_my_skills">My skills</string>
    <string name="lorem_text_skills">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long
        established fact that a reader will be distracted by the readable content of a page when
        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
        distribution of letters, as opposed to using \'Content here, content here\', making it look
        like readable English. Many desktop publishing packages and web page editors now use Lorem
        Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web
        sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>

    // -----------------------------------------------------------------------------
    <!-- TODO: FRAGMENT FIFTH.xml (ACHIEVEMENT SCREEN)  -->
    <string name="about_my_achievement">My achievement</string>
    <string name="lorem_text_achievement">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long
        established fact that a reader will be distracted by the readable content of a page when
        looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
        distribution of letters, as opposed to using \'Content here, content here\', making it look
        like readable English. Many desktop publishing packages and web page editors now use Lorem
        Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web
        sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>

</resources>