<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/firstFragment"
        android:title="@string/bottom_menu_icon_profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/secondFragment"
        android:title="@string/bottom_menu_icon_school"
        android:icon="@drawable/ic_school" />

    <item
        android:id="@+id/thirdFragment"
        android:title="@string/bottom_menu_icon_hobbies"
        android:icon="@drawable/ic_hobbies" />

    <item
        android:id="@+id/fourthFragment"
        android:title="@string/bottom_menu_icon_skills"
        android:icon="@drawable/ic_camera"/>

    <item
        android:id="@+id/fifthFragment"
        android:title="@string/bottom_menu_icon_achievements"
        android:icon="@drawable/ic_up"/>
</menu>