<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <!-- image with text -->
    <!-- Source: https://www.youtube.com/watch?v=jihLJ0oVmGo -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:src="@drawable/marcos_img"
        app:shapeAppearanceOverlay="@style/Circular"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/user_name_fragmentFirst"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userShortIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/user_shortIntro_fragmentFirst"
        android:textAlignment="center"
        android:textSize="20sp" />

    <!-- Floating button and textViews   -->
    <!-- Delete the marginTop and the layout goes up again   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/main_color"
            android:contentDescription="@string/email_icon_fragmentFirst"
            app:backgroundTint="@color/main_color"
            app:srcCompat="@drawable/ic_email"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/user_copyright_fragmentFirst"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/user_buldWith_fragmentFirst"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="normal" />
    </LinearLayout>

</LinearLayout>